<resources>
    <string name="app_name">College-Project</string>
    <string name="Principal">PRINCIPAL</string>
    <string name="HOD">HOD</string>
    <string name="TEACHER">TEACHER</string>
    <string name="STUDENT">STUDENT</string>
    <string name="Gmail">ENTER YOUR GMAIL</string>
    <string name="amount">Gmail</string>
    <string name="Pass">PASSWORD</string>
    <string name="Login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignUp">Sign Up</string>
</resources>