<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_ct"
        android:layout_marginTop="70dp"
        app:layout_constraintVertical_bias=".03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/img"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t_i_lLayoutGmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:hint="@string/amount"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_ct"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/t_i_etgmail"
            android:layout_width="match_parent"
            android:textSize="20sp"

            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t_i_lLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:hint="@string/Pass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_i_lLayoutGmail"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/m_t_i_Gmail"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_i_lLayoutPass"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:text="@string/SignUp"/>


</androidx.constraintlayout.widget.ConstraintLayout>