<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/navController"
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:defaultNavHost="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:navGraph="@navigation/bottom_nav_navigation"
         tools:layout_editor_absoluteX="90dp"
         />


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"
        android:id="@+id/guideline_h_15"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"
        android:id="@+id/guideline_h_40"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"
        android:id="@+id/guideline_h_50"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"
        android:id="@+id/guideline_h_75"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        android:id="@+id/guideline_v_10"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        android:id="@+id/guideline_v_50"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55"
        android:id="@+id/guideline_v_55"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95"
        android:id="@+id/guideline_v_95"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v_10"
        app:layout_constraintTop_toTopOf="@id/guideline_h_15"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_40"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#E4AC63"
        android:id="@+id/PRINCIPAL"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Principal"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:layout_gravity="center|bottom"
            android:textColor="@color/black"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v_55"
        app:layout_constraintTop_toTopOf="@id/guideline_h_15"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_95"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_40"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#2B7FC8"
        android:id="@+id/cvSalary"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOD"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"
            android:textColor="@color/black"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v_10"
        app:layout_constraintTop_toTopOf="@id/guideline_h_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_75"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#EF6C00"
        android:id="@+id/cvAttendance"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEACHER"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"
            android:textColor="@color/black"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v_55"
        app:layout_constraintTop_toTopOf="@id/guideline_h_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_95"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_75"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#E84BB3"
        android:id="@+id/cvAdvance"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            />

        <TextView
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STUDENT"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"
            android:textColor="@color/black"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>